changed to exe no asm